--- a/painting_classifier_model.ipynb
+++ b/painting_classifier_model.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastai.vision.widgets import *\n",
-    "from utils import *"
+    "from fastbook import *\n",
+    "from fastai.vision.widgets import *"
    ]
   },
   {
